# kokoro

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
demo/: app.py  es.txt
examples/: add_batch.py  automatic_pipeline.py  decoupled_inference.py  download_custom_dir_example.py  es_test_kokoro.py
kokoro/: __init__.py  __main__.py  inference.py  istftnet.py  model.py  models.py  modules.py  pipeline.py
kokoro.js/: package-lock.json  package.json
kokoro.js/demo/: README.md  package-lock.json  package.json
kokoro.js/demo/src/: worker.js
kokoro.js/src/: kokoro.js  phonemize.js  voices.js
kokoro.js/tests/: phonemize.test.js
tests/: conftest.py  test_inference.py  test_pipeline.py
